The links for the projects have been added

--- a/index.html
+++ b/index.html
@@ -226,7 +226,10 @@
           /></span>
           <h3 class="major">Projects</h3>
           <h4>
-            CROWDSOURCED PARTICIPATORY MEDICINE FRAMEWORK | DESIGN PROJECT
+            CROWDSOURCED PARTICIPATORY MEDICINE FRAMEWORK | DESIGN PROJECT |
+            <a href="https://cspm.herokuapp.com/"
+              ><i class="fa fa-link"></i>website</a
+            >
           </h4>
           <ul>
             <li>
@@ -245,7 +248,12 @@
               medicines they took and many more
             </li>
           </ul>
-          <h4>SENTIMENT ANALYSIS USING NLP | ML COURSE PROJECT</h4>
+          <h4>
+            SENTIMENT ANALYSIS USING NLP | ML COURSE PROJECT |
+            <a href="https://github.com/ABharatSai/Sentiment_Analysis-using-NLP"
+              ><i class="fa fa-link"></i>github</a
+            >
+          </h4>
           <ul>
             <li>
               Preprocessed the IMDb data with the help of the powerful library
@@ -260,7 +268,13 @@
               is obtained from the stanford university
             </li>
           </ul>
-          <h4>COVID-19 DETECTION FROM X-RAYS | DL COURSE PROJECT</h4>
+          <h4>
+            COVID-19 DETECTION FROM X-RAYS | DL COURSE PROJECT |
+            <a
+              href="https://github.com/ABharatSai/COVID-19-Detection-From-X-Ray"
+              ><i class="fa fa-link"></i>github</a
+            >
+          </h4>
           <ul>
             <li>
               Preprocessed the X-Ray images and applied some data augumentation
@@ -272,7 +286,12 @@
             </li>
             <li>Obtained a maximum accuracy of 84.7% upon testing the data</li>
           </ul>
-          <h4>SIMPLE BLOG | SELF PROJECT</h4>
+          <h4>
+            SIMPLE BLOG | SELF PROJECT |
+            <a href="https://abharatsai-blog-django.herokuapp.com/"
+              ><i class="fa fa-link"></i>github</a
+            >
+          </h4>
           <ul>
             <li>
               It contains a view for opening in new single page and addition to
@@ -281,7 +300,12 @@
             </li>
             <li>Deployed in heroku and code is also available in github</li>
           </ul>
-          <h4>DropNet Reproduced Results | DL COURSE PROJECT</h4>
+          <h4>
+            DropNet Reproduced Results | DL COURSE PROJECT |
+            <a href="https://github.com/ABharatSai/DropNet_Reproduced_Results"
+              ><i class="fa fa-link"></i>github</a
+            >
+          </h4>
           <ul>
             <li>
               Choosed the DROPNET paper and reproduced their results using their
@@ -297,7 +321,12 @@
               used
             </li>
           </ul>
-          <h4>SIMPLE CALCULATOR | SELF PROJECT</h4>
+          <h4>
+            SIMPLE CALCULATOR | SELF PROJECT |
+            <a href="https://abharatsai.github.io/Simple_Calculator/"
+              ><i class="fa fa-link"></i>website</a
+            >
+          </h4>
           <ul>
             <li>
               A simple functionality calculator for the purpose of learning
@@ -307,7 +336,12 @@
               Deployed in github pages and code is also available in github
             </li>
           </ul>
-          <h4>MultiPurpose app for IITJ | ENGINEERING DESIGN PROJECT</h4>
+          <h4>
+            MultiPurpose app for IITJ | ENGINEERING DESIGN PROJECT |
+            <a href="https://github.com/imraghav20/IITJ-App"
+              ><i class="fa fa-link"></i>github</a
+            >
+          </h4>
           <ul>
             <li>
               Led a team of 8 members for Ideation and created a everyone
@@ -387,7 +421,7 @@
           </li>
         </ul>
         <p class="copyright">
-          Design: <a href="https://html5up.net">HTML5 UP</a>.
+          Design: <a href="https://html5up.net">HTML5 UP</a>
         </p>
       </footer>
     </div>
