Hobbies are added

--- a/index.html
+++ b/index.html
@@ -72,13 +72,14 @@
           </p>
           <h3 class="major">Hobbies</h3>
           <ul style="list-style-type: none">
-            <li>Hi, Myself Addepalli Bharat Sai.</li>
             <li>
-              I am from southern part of India, Andhra Pradesh, Visakhapatnam.
+              My favorite one will be Binge watching, I can continuosly go for
+              upto 10 hours
             </li>
+            <li>I am least interested in leisure activities</li>
             <li>
-              I successfully cleared Jee-Advanced in 2019 and took admission in
-              IIT Jodhpur as an Undergraduate student.
+              I like reading, once I completed all 7 Harry Potter books in 12
+              days
             </li>
           </ul>
           <p>Want to know more about me? feel free to contact me!</p>
