--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li>
-              <a href="assets\RESUME_Main_.pdf" download>
+              <a href="assets\B19BB002_Resume.pdf">
                 Resume <i class="icon solid fa-download"></i
               ></a>
             </li>
@@ -227,9 +227,30 @@
           /></span>
           <h3 class="major">Projects</h3>
           <h4>
+            Cancer App | B. Tech PROJECT |
+            <a href="https://github.com/ABharatSai/Cancer-Prediction-App"
+              ><i class="fa fa-link"></i>Github</a
+            >
+          </h4>
+          <ul>
+            <li>
+              Main motive to help the Oncologists in selecting the genes for
+              biomarker testing and gives them the treatment on the basis of the
+              oncoKB level of FDA evidence
+            </li>
+            <li>
+              Simplifing the available resources and giving the user the fast
+              and reliable solution. Made the design, structuring, and framework
+              specifically for the pancreatic adenocarcinoma
+            </li>
+            <li>
+              <b>Tech Stack</b> : Flutter, Dart, Android Studio, C++, CMake
+            </li>
+          </ul>
+          <h4>
             CROWDSOURCED PARTICIPATORY MEDICINE FRAMEWORK | DESIGN PROJECT |
             <a href="https://cspm.herokuapp.com/"
-              ><i class="fa fa-link"></i>website</a
+              ><i class="fa fa-link"></i>Website</a
             >
           </h4>
           <ul>
@@ -252,7 +273,7 @@
           <h4>
             SENTIMENT ANALYSIS USING NLP | ML COURSE PROJECT |
             <a href="https://github.com/ABharatSai/Sentiment_Analysis-using-NLP"
-              ><i class="fa fa-link"></i>github</a
+              ><i class="fa fa-link"></i>Github</a
             >
           </h4>
           <ul>
@@ -273,7 +294,7 @@
             COVID-19 DETECTION FROM X-RAYS | DL COURSE PROJECT |
             <a
               href="https://github.com/ABharatSai/COVID-19-Detection-From-X-Ray"
-              ><i class="fa fa-link"></i>github</a
+              ><i class="fa fa-link"></i>Github</a
             >
           </h4>
           <ul>
@@ -286,6 +307,20 @@
               COVID19 Radiography dataset
             </li>
             <li>Obtained a maximum accuracy of 84.7% upon testing the data</li>
+          </ul>
+          <h4>
+            Virtual Lab in the Field of Bioinformatics | DESIGN PROJECT |
+            <a href="https://abharatsai.github.io/Virtual_Lab/"
+              ><i class="fa fa-link"></i>Website</a
+            >
+          </h4>
+          <ul>
+            <li>
+              Developed a everyone friendly website for the protein 3D structure
+              analysis, with step-by-step procedure to use Molstar from PDB ID,
+              with the molstar simulation embedded onto the website
+            </li>
+            <li><b>Tech Stack</b> : HTML, CSS, JavaScript, Molstar</li>
           </ul>
           <h4>
             SIMPLE BLOG | SELF PROJECT |
