--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li>
-              <a href="assets\B19BB002_Resume.pdf">
+              <a href="assets\Bharat_Resume.pdf">
                 Resume <i class="icon solid fa-download"></i
               ></a>
             </li>
