New intro update

--- a/index.html
+++ b/index.html
@@ -65,10 +65,30 @@
             ><img src="images\about.jpeg" class="center" alt=""
           /></span>
           <p>
-            Hi, Myself Addepalli Bharat Sai. I am from southern part of India,
-            Andhra Pradesh, Visakhapatnam. I successfully cleared Jee-Advanced
-            in 2019 and took admission in IIT Jodhpur as an Undergraduate
-            student.
+            Hello there! My name is Addepalli Bharat Sai, and I am a
+            Bioengineering student at IIT Jodhpur. While my major might be in
+            the field of Bioengineering, my true passion lies in computer
+            technologies such as Python, Django, C/C++, HTML, CSS, Bootstrap,
+            and Machine Learning.
+          </p>
+
+          <p>
+            I have always been fascinated by the power of technology and its
+            ability to solve complex problems. Through my coursework and
+            personal projects, I have gained experience in various programming
+            languages and have developed a strong foundation in Machine Learning
+            and Deep Learning.
+          </p>
+          <p>
+            Apart from my technical skills, I am a team player and possess
+            excellent communication and problem-solving skills. I am always
+            eager to learn and take on new challenges that come my way.
+          </p>
+          <p>
+            If you are looking for someone with a strong technical background
+            and a passion for technology, please feel free to reach out to me on
+            LinkedIn. I am open to new opportunities and would be delighted to
+            connect with you!
           </p>
           <h3 class="major">Hobbies</h3>
           <ul style="list-style-type: none">
